@@ -6,6 +6,9 @@ NEW FUNCTIONS ADDED:
    * install.7zip - for unzipping of FFmpeg
    * system.PATH - to see what is in the users PATH for running .exe programs.
 
+UPDATED FUNCTIONS:
+   * os.manage - now asks the user in how many minutes to perform the operation.
+
 BUG FIXES:
    * Fixed a bug in install.LyX.rd that caused it to not load properly when using install_github (props goes to Richard Cotton for catching the bug.)
 
@@ -159,3 +162,4 @@ TODO for future releases:
    * Maybe add some timer to the os.manage functions.  And also allow input for how long from x time to perform the action.
    * Add a rate function for the package
    * Add automatic check for a new R version every X time.
+   * a way to copy/move Rprofile.site from one installation to the next such as "C:\Program Files\R\R-2.15.2\etc\Rprofile.site" to "C:\Program Files\R\R-2.15.3\etc\Rprofile.site"? (requested by: Farrel Buchinsky)
